tests/snapshots/timex/output-ws-h16.snap
---
source: tests/runner.rs
description: top-type-sizes -ws -h16
---
208 unix::linux_like::linux::gnu::timex align=8
     16 time
