tests/snapshots/timex/types.snap
---
source: tests/runner.rs
description: internal representation
---
- name: "unix::linux_like::linux::gnu::timex"
  size: 208
  align: 8
  kind:
    Struct:
      items:
        - Field:
            kind: AdtField
            name: modes
            size: 4
        - Padding: 4
        - Field:
            kind: AdtField
            name: offset
            size: 8
            align: 8
        - Field:
            kind: AdtField
            name: freq
            size: 8
        - Field:
            kind: AdtField
            name: maxerror
            size: 8
        - Field:
            kind: AdtField
            name: esterror
            size: 8
        - Field:
            kind: AdtField
            name: status
            size: 4
        - Padding: 4
        - Field:
            kind: AdtField
            name: constant
            size: 8
            align: 8
        - Field:
            kind: AdtField
            name: precision
            size: 8
        - Field:
            kind: AdtField
            name: tolerance
            size: 8
        - Field:
            kind: AdtField
            name: time
            size: 16
        - Field:
            kind: AdtField
            name: tick
            size: 8
        - Field:
            kind: AdtField
            name: ppsfreq
            size: 8
        - Field:
            kind: AdtField
            name: jitter
            size: 8
        - Field:
            kind: AdtField
            name: shift
            size: 4
        - Padding: 4
        - Field:
            kind: AdtField
            name: stabil
            size: 8
            align: 8
        - Field:
            kind: AdtField
            name: jitcnt
            size: 8
        - Field:
            kind: AdtField
            name: calcnt
            size: 8
        - Field:
            kind: AdtField
            name: errcnt
            size: 8
        - Field:
            kind: AdtField
            name: stbcnt
            size: 8
        - Field:
            kind: AdtField
            name: tai
            size: 4
        - Field:
            kind: AdtField
            name: __unused1
            size: 4
        - Field:
            kind: AdtField
            name: __unused2
            size: 4
        - Field:
            kind: AdtField
            name: __unused3
            size: 4
        - Field:
            kind: AdtField
            name: __unused4
            size: 4
        - Field:
            kind: AdtField
            name: __unused5
            size: 4
        - Field:
            kind: AdtField
            name: __unused6
            size: 4
        - Field:
            kind: AdtField
            name: __unused7
            size: 4
        - Field:
            kind: AdtField
            name: __unused8
            size: 4
        - Field:
            kind: AdtField
            name: __unused9
            size: 4
        - Field:
            kind: AdtField
            name: __unused10
            size: 4
        - Field:
            kind: AdtField
            name: __unused11
            size: 4
